Fix card spacing

--- a/src/components/registerToVoteCard.module.scss
+++ b/src/components/registerToVoteCard.module.scss
@@ -7,7 +7,7 @@ $secondaryBlue: #deeffe;
   min-height: 50rem;
   flex-direction: column;
   justify-content: space-between;
-  margin: 4rem 1.5rem;
+  margin: 4rem 3rem;
   padding: 6.8rem 6.1rem;
   box-shadow: 0px 4px 30px rgba(203, 201, 201, 0.25);
   border-radius: 0.6rem;
